--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
   background-size: cover;
   border: 2px solid #1793d1;">
 	<h4 class="text-white ps-3 fw-bold" id="retro1">Hello, my name is</h4>
-	<h2 class="text-primary fw-bold" id="retro2">Ruilin Peng</h2>
+  <div class="cursor">
+	<h2 class="text-primary fw-bold" id="retro2">Ruilin Peng<i></i></h2>
 	</div>
+  </div>
 	</div>
 	
   </div>
@@ -116,6 +118,7 @@ background-position: center;">>
         </div>
     <div class="col">
   <h3 class="text-success fw-bold ms-4 " id="retro" >About me</h3>
+  
   <p class="text-white fw-bold ms-4 mt-4" id="retro" >I am a 4th year Statistical Science Major & Computer
     Science minor & Mathematics Minor Student at University of toronto. On daily basis, i got 2 laptops
   running<span class="text-primary fw-bold " id="retro"> arch linux</span> and play some mobile games such as
