--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                   ⌨ 
               </button>
               <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="indexc.html" data-option="Any">CN/中文</a></li>
-                  <li><a class="dropdown-item" href="indexj1.html" data-option="Abyssinian">JP/日本語</a></li>
+                  <li><a class="dropdown-item" href="indexc.html" data-option="Any" id="retroj">CN/中文</a></li>
+                  <li><a class="dropdown-item" href="indexj1.html" data-option="Abyssinian" id="retroj">JP/日本語</a></li>
                   
                   <li>
                       <hr class="dropdown-divider">
