--- a/indexj1.html
+++ b/indexj1.html
@@ -65,8 +65,8 @@
                   ⌨ 
               </button>
               <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="indexc.html" data-option="Any">CN/中文</a></li>
-                  <li><a class="dropdown-item" href="index.html" data-option="Abyssinian">EN/英語</a></li>
+                  <li><a class="dropdown-item" href="indexc.html" data-option="Any"　id="retroj" >CN/中文</a></li>
+                  <li><a class="dropdown-item" href="index.html" data-option="Abyssinian"　id="retroj" >EN/英語</a></li>
                   
                   <li>
                       <hr class="dropdown-divider">
@@ -152,7 +152,7 @@ background-position: center;">>
 </div>
 
 <div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills">
-  <h3 class="text-primary fw-bold ms-4" id="retro" >My skills</h3>
+  <h3 class="text-primary fw-bold ms-4" id="retroj" >マイ　スキルズ</h3>
   <div class="row row-cols-1 row-cols-md-4 g-4 mt-4">
     <div class="col">
       <div class="card h-100 bg-white">
