--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -193,7 +196,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 15</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -215,7 +221,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 15</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -236,7 +245,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 1</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -257,7 +269,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 25</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -269,7 +284,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">django</h5>
-          <p class="card-text text-center" id="retro">    CSC384        </p>
+          <p class="card-text text-center" id="retro">    CSC309        </p>
           
           <ul class="list-group">
               <li class="list-group-item border-0 bg-white text-center" id="retro"><a href="https://blog.ruilinp.com/posts/django" class="btn btn-dark">Learn more</a>
@@ -278,7 +293,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -290,7 +308,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">react</h5>
-          <p class="card-text text-center" id="retro">    CSC384        </p>
+          <p class="card-text text-center" id="retro">    CSC309        </p>
           
           <ul class="list-group">
               <li class="list-group-item border-0 bg-white text-center" id="retro"><a href="https://blog.ruilinp.com/posts/react" class="btn btn-dark">Learn more</a>
@@ -299,7 +317,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -320,7 +341,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -341,7 +365,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -361,7 +388,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -382,7 +412,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 8</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -403,7 +436,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. MAX</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -423,7 +459,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 95</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -443,7 +482,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 97</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -463,7 +505,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 5</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 5%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -483,7 +528,10 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 55</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
