--- a/indexj1.html
+++ b/indexj1.html
@@ -170,7 +170,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -190,7 +193,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 15</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -212,7 +218,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 15</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -233,7 +242,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 1</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -254,7 +266,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 25</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -266,7 +281,7 @@ background-position: center;">>
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">django</h5>
-          <p class="card-text text-center" id="retro">    CSC384        </p>
+          <p class="card-text text-center" id="retro">    CSC309        </p>
           
           <ul class="list-group">
               <li class="list-group-item border-0 bg-white text-center" id="retro"><a href="https://blog.ruilinp.com/posts/django" class="btn btn-dark">Learn more</a>
@@ -275,7 +290,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -287,7 +305,7 @@ background-position: center;">>
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">react</h5>
-          <p class="card-text text-center" id="retro">    CSC384        </p>
+          <p class="card-text text-center" id="retro">    CSC309        </p>
           
           <ul class="list-group">
               <li class="list-group-item border-0 bg-white text-center" id="retro"><a href="https://blog.ruilinp.com/posts/react" class="btn btn-dark">Learn more</a>
@@ -296,7 +314,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -317,7 +338,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -338,7 +362,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 10</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -358,7 +385,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 20</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -379,7 +409,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 8</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -400,7 +433,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. MAX</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -420,7 +456,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 95</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -440,7 +479,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 97</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -460,7 +502,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 5</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 5%"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -480,7 +525,10 @@ background-position: center;">>
             </ul>
         </div>
         <div class="card-footer bg-info">
-          <small class="text-white" id="retro">Last updated Oct 2023</small>
+          <small class="text-white" id="retro">Lv. 55</small>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+          </div>
         </div>
       </div>
     </div>
