--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   </nav>
   </header>
-  <div class=" ms-0 me-0" style="height: 100vh;
+  <div class=" ms-0 me-0" style="height: 120vh;
   width: 100%;
   background-image: url(archchan.png);
   background-size: cover;
@@ -105,13 +105,22 @@
 	</div>
 	
   </div>
+  <div style="height: 3vh;
+            width: 100%; /* Ensure the width is sufficient for the repetition */
+            display: flex;
+            justify-content: center;
+            background-repeat: repeat-x;
+            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-size: auto; /* Use 'auto' to maintain the image's original size */
+            background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5" style="height: 150vh;
 display: flex;
 justify-content: center;
 
 background-image: url(img/monitor.png);
 background-size: cover;
-background-position: center;">>
+background-position: center;">
+
   <pre><output id="arch" style="margin-top: 40%;">[ruilin@archlinux blog]$ neofetch 
                    -`                    ruilin@archlinux 
                   .o+`                   ---------------- 
@@ -136,7 +145,14 @@ background-position: center;">>
  
 </output></pre>
 </div>
-
+<div style="height: 3vh;
+            width: 100%; /* Ensure the width is sufficient for the repetition */
+            display: flex;
+            justify-content: center;
+            background-repeat: repeat-x;
+            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-size: auto; /* Use 'auto' to maintain the image's original size */
+            background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5 mb-5 bg-black" id="about">
   <div class="row">
     <div class="col bg-black justify-content-center">
@@ -153,8 +169,15 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     </div>
     </div>
 </div>
-
-<div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills">
+<div style="height: 3vh;
+            width: 100%; /* Ensure the width is sufficient for the repetition */
+            display: flex;
+            justify-content: center;
+            background-repeat: repeat-x;
+            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-size: auto; /* Use 'auto' to maintain the image's original size */
+            background-position: center; border: 2px solid #333;"></div>
+<div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills" >
   <h3 class="text-primary fw-bold ms-4" id="retro" >My skills</h3>
   <div class="row row-cols-1 row-cols-md-4 g-4 mt-4">
     <div class="col">
