--- a/indexc.html
+++ b/indexc.html
@@ -87,7 +87,7 @@
   </header>
   <div class=" ms-0 me-0" style="height: 120vh;
   width: 100%;
-  background-image: url(archchan.png);
+  background-image: url(img/endfield8.jpg);
   background-size: cover;
   background-position: center;">
 <!-- <img class="bg-img" style="width: 100%;" src="archchan.png" alt="..."> -->
@@ -105,14 +105,14 @@
 	</div>
 	
   </div>
-  <div style="height: 3vh;
+  <!-- <div style="height: 3vh;
   width: 100%; /* Ensure the width is sufficient for the repetition */
   display: flex;
   justify-content: center;
   background-repeat: repeat-x;
   background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
   background-size: auto; /* Use 'auto' to maintain the image's original size */
-  background-position: center; border: 2px solid #333;"></div>
+  background-position: center; border: 2px solid #333;"></div> -->
 <div class="container mt-5" style="height: 150vh;
 display: flex;
 justify-content: center;
