--- a/indexj1.html
+++ b/indexj1.html
@@ -85,9 +85,9 @@
     </div>
   </nav>
   </header>
-  <div class=" ms-0 me-0" style="height: 120vh;
+  <div class=" ms-0 me-0" style="height: 140vh;
   width: 100%;
-  background-image: url(img/endfield8.jpg);
+  background-image: url(img/16bit.jpg);
   background-size: cover;
   background-position: center;">
 <!-- <img class="bg-img" style="width: 100%;" src="archchan.png" alt="..."> -->
