--- a/indexj1.html
+++ b/indexj1.html
@@ -25,13 +25,14 @@
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#navbarNav"
-        class="navbar-toggler bg-primary"
+        class="navbar-toggler custom-toggler-button"
         aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
 		
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon "></span>
+        
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
