--- a/indexj1.html
+++ b/indexj1.html
@@ -15,6 +15,10 @@
 <body class = "bg-black">
   <!--navbar-->
   <header>
+    <!-- Back to Top Button -->
+		<div class="back-to-top-button">
+			<button type="button" class="btn custom-toggler-button" onclick="scrollToTop()"> &#x2191; </button>
+		</div>
   <nav class="navbar navbar-expand-sm navbar-light bg-dark">
     <!-- Navbar content -->
     <div class="container-fluid">
@@ -693,6 +697,11 @@ background-position: center; border: 2px solid #333;"></div>
 	  </div>
     
   </footer>
+  <script>
+		function scrollToTop() {
+			window.scrollTo({ top: 0, behavior: 'smooth' });
+		}
+	</script>
 
 
 </body>
