--- a/indexj1.html
+++ b/indexj1.html
@@ -118,6 +118,7 @@
   background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
   background-size: auto; /* Use 'auto' to maintain the image's original size */
   background-position: center; border: 2px solid #333;"></div> -->
+  
 <div class="container mt-5" style="height: 150vh;
 display: flex;
 justify-content: center;
@@ -125,7 +126,8 @@ justify-content: center;
 background-image: url(img/monitor.png);
 background-size: cover;
 background-position: center;">>
-  <pre><output id="arch" style="margin-top: 40%;">[ruilin@archlinux blog]$ neofetch 
+<h3 class="text-white fw-bold ms-4" id="retroj" >テームについて。。。</h3>
+  <!-- <pre><output id="arch" style="margin-top: 40%;">[ruilin@archlinux blog]$ neofetch 
                    -`                    ruilin@archlinux 
                   .o+`                   ---------------- 
                  `ooo/                   OS: Arch Linux x86_64 
@@ -147,8 +149,12 @@ background-position: center;">>
  .`                                 `/  
     
  
-</output></pre>
+</output></pre> -->
+
+  <iframe class="embed-responsive-item" style="width: 70%; height: 50%; margin-top: 19%; margin-left: -20%;" src="https://yewtu.be/embed/6xXu0cneaSY"></iframe>
+
 </div>
+
 <div style="height: 3vh;
 width: 100%; /* Ensure the width is sufficient for the repetition */
 display: flex;
