--- a/indexj1.html
+++ b/indexj1.html
@@ -118,15 +118,15 @@
   background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
   background-size: auto; /* Use 'auto' to maintain the image's original size */
   background-position: center; border: 2px solid #333;"></div> -->
-  
-<div class="container mt-5" style="height: 150vh;
+  <h3 class="text-white fw-bold ms-5 mt-3" id="retroj" >テームについて。。。</h3>  
+<div class="container mt-5" style="height: 100vh;
 display: flex;
 justify-content: center;
-
+background-repeat: no-repeat;
 background-image: url(img/monitor.png);
-background-size: cover;
-background-position: center;">>
-<h3 class="text-white fw-bold ms-4" id="retroj" >テームについて。。。</h3>
+background-size: 75%;
+background-position: center;"  >
+
   <!-- <pre><output id="arch" style="margin-top: 40%;">[ruilin@archlinux blog]$ neofetch 
                    -`                    ruilin@archlinux 
                   .o+`                   ---------------- 
@@ -151,8 +151,9 @@ background-position: center;">>
  
 </output></pre> -->
 
-  <iframe class="embed-responsive-item" style="width: 70%; height: 46%; margin-top: 21%; margin-left: -20%;" src="https://yewtu.be/embed/6xXu0cneaSY"></iframe>
-
+<div class="video-container">
+  <iframe class="embed-responsive-item" src="https://yewtu.be/embed/6xXu0cneaSY"></iframe>
+</div>
 </div>
 
 <div style="height: 3vh;
