--- a/indexj1.html
+++ b/indexj1.html
@@ -152,7 +152,8 @@ background-position: center;"  >
 </output></pre> -->
 
 <div class="video-container">
-  <iframe class="embed-responsive-item" src="https://yewtu.be/embed/6xXu0cneaSY"></iframe>
+  <!-- <iframe class="embed-responsive-item" src="https://yewtu.be/embed/6xXu0cneaSY"></iframe> -->
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6xXu0cneaSY" allowfullscreen></iframe>
 </div>
 </div>
 
