--- a/indexj1.html
+++ b/indexj1.html
@@ -92,14 +92,14 @@
   </header>
   <div class=" ms-0 me-0" style="height: 140vh;
   width: 100%;
-  background-image: url(img/16bit.jpg);
+  background-image: url(img/16bit.webp);
   background-size: cover;
   background-position: center;">
-<!-- <img class="bg-img" style="width: 100%;" src="archchan.png" alt="..."> -->
+<!-- <img class="bg-img" style="width: 100%;" src="archchan.webp" alt="..."> -->
 <div class="inner-container ms-5" style="width: 50%; height: 30%; padding-top: 400px;">
   <div style="height: 20vh;
   width: 65%;
-  background-image: url(img/terminal1.png);
+  background-image: url(img/terminal1.webp);
   background-size: cover;
   border: 2px solid #1793d1;">
 	<h4 class="text-white ps-3 fw-bold" id="retroj1">こんにちは, </h4>
@@ -115,7 +115,7 @@
   display: flex;
   justify-content: center;
   background-repeat: repeat-x;
-  background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+  background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
   background-size: auto; /* Use 'auto' to maintain the image's original size */
   background-position: center; border: 2px solid #333;"></div> -->
   <h3 class="text-white fw-bold ms-5 mt-3" id="retroj" >テームについて。。。</h3>  
@@ -123,7 +123,7 @@
 display: flex;
 justify-content: center;
 background-repeat: no-repeat;
-background-image: url(img/monitor.png);
+background-image: url(img/monitor.webp);
 background-size: 75%;
 background-position: center;"  >
 
@@ -162,13 +162,13 @@ width: 100%; /* Ensure the width is sufficient for the repetition */
 display: flex;
 justify-content: center;
 background-repeat: repeat-x;
-background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
 background-size: auto; /* Use 'auto' to maintain the image's original size */
 background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5 mb-5 bg-black" id="about">
   <div class="row">
     <div class="col bg-black justify-content-center">
-      <img src="../ruilin.png" alt="" style="width: 100%;"/>
+      <img src="../ruilin.webp" alt="" style="width: 100%;"/>
         </div>
     <div class="col">
   <h3 class="text-success fw-bold ms-4 " id="retroj" >俺について</h3>
@@ -183,7 +183,7 @@ width: 100%; /* Ensure the width is sufficient for the repetition */
 display: flex;
 justify-content: center;
 background-repeat: repeat-x;
-background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
 background-size: auto; /* Use 'auto' to maintain the image's original size */
 background-position: center; border: 2px solid #333;"></div>
 <div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills">
@@ -192,7 +192,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-        <img src="../img/python.png" alt="..." style="width: 50%;">
+        <img src="../img/python.webp" alt="..." style="width: 50%;">
         </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Python</h5>
@@ -215,7 +215,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/c.png" alt="..." style="width: 50%;">
+          <img src="../img/c.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C</h5>
@@ -240,7 +240,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/java.png" alt="..." style="width: 50%;">
+          <img src="../img/java.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Java</h5>
@@ -264,7 +264,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/Cs.png" alt="..." style="width: 50%;">
+          <img src="../img/Cs.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C#</h5>
@@ -288,7 +288,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="img/html.jpg" alt="..." style="width: 50%;">
+          <img src="img/html.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-3" id="retro">HTML/CSS/Bootstrap/js</h5>
@@ -312,7 +312,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/django.png" alt="..." style="width: 50%;">
+          <img src="../img/django.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">django</h5>
@@ -336,7 +336,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/react.png" alt="..." style="width: 50%;">
+          <img src="../img/react.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">react</h5>
@@ -360,7 +360,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/R.png" alt="..." style="width: 50%;">
+          <img src="../img/R.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">R</h5>
@@ -384,7 +384,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/SAS.png" alt="..." style="width: 50%;">
+          <img src="../img/SAS.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">SAS</h5>
@@ -407,7 +407,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/tux.png" alt="..." style="width: 50%;">
+          <img src="../img/tux.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-4" id="retro">linux</h5>
@@ -431,7 +431,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/unity.png" alt="..." style="width: 50%;">
+          <img src="../img/unity.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">unity</h5>
@@ -455,7 +455,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/latex.png" alt="..." style="width: 50%;">
+          <img src="../img/latex.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">latex</h5>
@@ -478,7 +478,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/libre.png" alt="..." style="width: 50%;">
+          <img src="../img/libre.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">LibreOffice</h5>
@@ -501,7 +501,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/xournal.png" alt="..." style="width: 50%;">
+          <img src="../img/xournal.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">xournal++</h5>
@@ -524,7 +524,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/ps.png" alt="..." style="width: 50%;">
+          <img src="../img/ps.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Photoshop/GIMP</h5>
@@ -547,7 +547,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/jlpt.png" alt="..." style="width: 50%;">
+          <img src="../img/jlpt.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Japanese</h5>
@@ -628,7 +628,7 @@ background-position: center; border: 2px solid #333;"></div>
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
           <div class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <img src="../ruilin.png" height="100" alt=""
+            <img src="../ruilin.webp" height="100" alt=""
                  loading="lazy" />
           </div>
 
